[gd_scene load_steps=9 format=3 uid="uid://c8cud71cbfw7w"]

[ext_resource type="Theme" uid="uid://b1v6gwakv465t" path="res://scenes/windows/window.tres" id="1_l1v6g"]
[ext_resource type="Script" path="res://scenes/windows/customers/customer_list_entry.gd" id="1_uxg16"]
[ext_resource type="Texture2D" uid="uid://16khyj5xlg1h" path="res://assets/icons/edit.svg" id="2_bhwlv"]
[ext_resource type="Texture2D" uid="uid://drpldd8r573p7" path="res://assets/icons/edit_hovered.svg" id="3_mojf2"]
[ext_resource type="Texture2D" uid="uid://bnyqdc1d7nx01" path="res://assets/icons/delete.svg" id="4_edfi2"]
[ext_resource type="Texture2D" uid="uid://dblmfkjew3507" path="res://assets/icons/delete_hovered.svg" id="5_vbgrt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t43c1"]
bg_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bo1oo"]
bg_color = Color(1, 1, 1, 0.0392157)

[node name="customer_list_entry" type="Control"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uxg16")

[node name="customer_button" type="Button" parent="."]
custom_minimum_size = Vector2(0, 32)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 8.0
grow_horizontal = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_t43c1")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_bo1oo")
theme_override_styles/hover = SubResource("StyleBoxFlat_bo1oo")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bo1oo")
theme_override_styles/normal = SubResource("StyleBoxFlat_t43c1")

[node name="margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 32.0
grow_horizontal = 2
mouse_filter = 2
theme = ExtResource("1_l1v6g")
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="h_box" type="HBoxContainer" parent="margin"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
mouse_filter = 2
theme = ExtResource("1_l1v6g")

[node name="customer" type="Control" parent="margin/h_box"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="customer_name" type="Label" parent="margin/h_box/customer"]
layout_mode = 2
offset_left = 5.0
offset_right = 1206.0
offset_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("1_l1v6g")
text = "customer_name"
vertical_alignment = 1

[node name="edit_button" type="TextureButton" parent="margin/h_box"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
theme = ExtResource("1_l1v6g")
texture_normal = ExtResource("2_bhwlv")
texture_pressed = ExtResource("3_mojf2")
texture_hover = ExtResource("3_mojf2")
ignore_texture_size = true
stretch_mode = 5

[node name="delete_button" type="TextureButton" parent="margin/h_box"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
theme = ExtResource("1_l1v6g")
texture_normal = ExtResource("4_edfi2")
texture_pressed = ExtResource("5_vbgrt")
texture_hover = ExtResource("5_vbgrt")
ignore_texture_size = true
stretch_mode = 5

[connection signal="pressed" from="customer_button" to="." method="_on_customer_button_pressed"]
[connection signal="pressed" from="margin/h_box/edit_button" to="." method="_on_edit_button_pressed"]
[connection signal="pressed" from="margin/h_box/delete_button" to="." method="_on_delete_button_pressed"]
